@@ -287,6 +287,9 @@ BUGFIXES:
   ZOOKEEPER-1478. Small bug in QuorumTest.testFollowersStartAfterLeader( )
   (Alexander Shraer via fpj, breed, phunt)
 
+  ZOOKEEPER-1387. Wrong epoch file created
+  (Benjamin Busjaeger via breed, phunt)
+
 IMPROVEMENTS:
 
   ZOOKEEPER-1170. Fix compiler (eclipse) warnings: unused imports,
